<resources>
    <string name="app_name">Coffee Shop</string>
    <string name="choice_your_favorite_coffee">Choice your\nFavorite Coffee</string>
    <string name="get_started">Get Started</string>
    <string name="splash">splash</string>
    <string name="sabrina_carpenter">Sabrina Carpenter</string>
    <string name="tina_anderson">Tina Anderson</string>
    <string name="profile_image">Profile Image</string>
    <string name="bell_icon">Bell Icon</string>
    <string name="setting_icon">Setting Icon</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="popular_coffees">Popular Coffees</string>
    <string name="see_all">See All</string>
    <string name="explorer">Explorer</string>
    <string name="button_explorer">Button Explorer</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="my_order">My Order</string>
    <string name="profile">Profile</string>
    <string name="button_cart">button_cart</string>
    <string name="button_wishlist">Button Wishlist</string>
    <string name="button_order">Button Order</string>
    <string name="button_profile">Button Profile</string>
    <string name="title">title</string>
    <string name="subtitle">subtitle</string>
    <string name="price">$-</string>
    <string name="list">List</string>
    <string name="back">Back</string>
    <string name="button_back">Button Back</string>
    <string name="button_favorite">Button Favorite</string>
    <string name="coffee_size">Coffee Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="qty">Qty.</string>
    <string name="strip">-</string>
    <string name="number">1</string>
    <string name="plus">+</string>
    <string name="button_star">Button Star</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="total_tax">Total Tax</string>
    <string name="total">Total</string>
    <string name="procced_to_checkout">Procced to Checkout</string>
    <string name="apply">Apply</string>
    <string name="enter_your_discount_code">Enter your Discount Code</string>
</resources>